<resources>
    <string name="app_name" translatable="false">Telegram Stickers</string>

    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>


<!--    <string name="cat_name_animals">Animals</string>-->
<!--    <string name="cat_name_comics">Cartoon</string>-->
<!--    <string name="cat_name_faces">Faces</string>-->
<!--    <string name="cat_name_games">Games</string>-->
<!--    <string name="cat_name_memes">Memes</string>-->
<!--    <string name="cat_name_messages">Messages</string>-->
<!--    <string name="cat_name_movies">Movies/TV Shows</string>-->
<!--    <string name="cat_name_others">Others</string>-->

<!--    <string name="cat_name_animals">Animals</string>-->
<!--    <string name="cat_name_animated">Animated</string>-->
<!--    <string name="cat_name_cartoon">Cartoon</string>-->
<!--    <string name="cat_name_games">Games</string>-->
<!--    <string name="cat_name_meme">Meme</string>-->
<!--    <string name="cat_name_movies_and_characters">Movies and Characters</string>-->
<!--    <string name="cat_name_sticker_set">StickerDb Set</string>-->
<!--    <string name="cat_name_tv_shows_and_series">TV Shows and Series</string>-->
<!--    <string name="cat_name_technology">Technology</string>-->
<!--    <string name="cat_name_vip_and_famous_people">VIP and Famous People</string>-->
<!--    <string name="cat_name_others">Others</string>-->

    <!--    <string name="leave_message">Are you sure you want to leave the application?</string>-->
    <!--    <string name="leave_title">Leave application?</string>-->

    <string name="INSTALL">INSTALL</string>
    <string name="add_sticker">Add Stickers Set</string>
    <string name="author_placeholder">Author: %s</string>
    <string name="author_unknown">Unknown</string>
    <string name="author_add">Author</string>
    <string name="categories">Categories</string>
    <string name="category_add">Category</string>
    <string name="install_stickers">INSTALL STICKERS</string>
    <string name="latest_stickers">Latest Stickers</string>
    <string name="link_add">Link</string>
    <string name="loading_stickers">Loading Stickers. Please wait…</string>


<!--    <string name="s7">Test Ad</string>-->
<!--    <string name="stickers_url_add_sticker" translatable="false">http://morellapps.com/telegramstickers/api/add_sticker.php</string>-->
<!--    <string name="stickers_url_all_stickers" translatable="false">http://morellapps.com/telegramstickers/api/get_all_stickers.php</string>-->
<!--    <string name="stickers_url_images" translatable="false">https://tgstickers-dbce8.web.app/v1/</string>-->

<!--    <string name="stickers_url_add_sticker" translatable="false">addsticker.php</string>-->
<!--    <string name="stickers_url_images" translatable="false">https://tgstickers-dbce8.web.app/v1/</string>-->

    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="report_message">Are you sure you want to report this Sticker Pack?</string>
    <string name="report_stickers">Report</string>
    <string name="report_title">Report Sticker Pack</string>
    <string name="submit_add">Submit</string>
    <string name="report_submitted">Report Submitted</string>
    <string name="telegramnotfound_message">You need to install the official Telegram app before install this Sticker Pack</string>
    <string name="telegramnotfound_title">Telegram not found!</string>
    <string name="this_application">This application</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_add">Title</string>
    <string name="no_internet">Unable to connect to Internet. Offline mode activated.</string>
    <string name="sticker_sending">Sending Stickers…</string>
    <string name="sticker_sent">Stickers Set has been sent.</string>



    <string name="feedback_bug" translatable="false">Bug</string>
    <string name="feedback_idea" translatable="false">Idea</string>
    <string name="feedback_question" translatable="false">Question</string>
    <string name="feedback_subject_bug" translatable="false">[BUG] %1$s</string>
    <string name="feedback_subject_idea" translatable="false">[IDEA] %1$s</string>
    <string name="feedback_subject_question" translatable="false">[QUESTION] %1$s</string>

<!--    <string name="firebase_database_url">https://telegram-stickers-d506e.firebaseio.com</string>-->


    <string name="send_feedback_optional_body" />
    <string name="send_feedback_optional_subject" />
    <string name="something_wrong">Something went wrong!</string>

    <string name="full_version_text_dynamic">Version %1$s build %2$s</string>
    <string name="title_favorite_statuses">\@@@ Saved @@@</string>

    <string name="sticker_name">Sticker Name</string>
    <string name="dictionary_all">All Stickers</string>
    <string name="splash_loading">Loading…</string>



</resources>
